--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     />
     <link rel="stylesheet" href="/main/global.css" />
     <link rel="stylesheet" href="/main/styles.css" />
-    <link rel="stylesheet" href="/details/styles/app.css" />
     <link rel="stylesheet" href="/critics/styles.css" />
+    <link rel="stylesheet" href="/details/styles/app.css" />
+
     <style>
       body {
         color: #343434;
@@ -24,18 +25,18 @@
     </style>
   </head>
   <body>
-    <!-- <div id="mainCard"></div>
-    <div id="details"></div>
-    <div id="sidebar"></div>
-    <div id="critics"></div> -->
     <div id="main_container" class="container" role="main">
-      <aside id="movieListColumn" class="col mob col-right hidden-xs">
+      <aside
+        id="movieListColumn"
+        class="col mob col-right hidden-xs"
+        style="max-width:300px"
+      >
         <div id="sidebar"></div>
       </aside>
       <div
         id="mainColumn"
         class="col mob col-center-right col-full-xs"
-        style="max-width:744px"
+        style="max-width:770px"
       >
         <div id="main"></div>
         <section
