--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <aside
         id="movieListColumn"
         class="col mob col-right hidden-xs"
-        style="max-width:300px"
+        style="max-width:300px; padding-top:10px"
       >
         <div id="sidebar"></div>
       </aside>
